--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,17 @@
 
 export(ccr.run_complete)
 export(ccr2.NormfoldChanges)
+export(ccr2.avgSingleGuides)
+export(ccr2.avgSingleGuides_combine)
+export(ccr2.filterGWclean)
+export(ccr2.logFCs2chromPos)
 export(ccr2.matchDualandSingleSeq)
+export(ccr2.modelSingleVSCombined)
+export(ccr2.plotCNA)
+export(ccr2.plotCNAdensity)
+export(ccr2.plotClasses)
+export(ccr2.plotMatchingSingle)
+export(ccr2.run_complete)
+export(ccr2.solveLinearSys)
 export(get_input_data)
 import(ggplot2)
