--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ccr2.createPseudoSingle)
 export(ccr2.createPseudoSingle_combine)
 export(ccr2.filterGWclean)
 export(ccr2.get_summary_singletons)
+export(ccr2.injectData)
 export(ccr2.logFCs2chromPos)
 export(ccr2.matchDualandSingleSeq)
 export(ccr2.match_singletons_singleFC)
