update name function ccr2.model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(ccr2.injectData)
 export(ccr2.logFCs2chromPos)
 export(ccr2.matchDualandSingleSeq)
 export(ccr2.match_singletons_singleFC)
-export(ccr2.modelSingleVSCombined)
+export(ccr2.modelSingleVSPseudoSingle)
 export(ccr2.plotCNA)
 export(ccr2.plotCNAdensity)
 export(ccr2.plotClasses)
