add models for gene_nontarget

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,9 @@ export(ccr2.plotClasses)
 export(ccr2.plotMatchingSingle)
 export(ccr2.plot_bliss_vs_FC)
 export(ccr2.plot_correction)
+export(ccr2.run)
 export(ccr2.run_complete)
+export(ccr2.run_nontarget)
 export(ccr2.scale_pos_neg)
 export(ccr2.solveLinearSys)
 export(get_input_data)
