--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(ccr2.plotCNA)
 export(ccr2.plotCNAdensity)
 export(ccr2.plotClasses)
 export(ccr2.plotMatchingSingle)
+export(ccr2.plot_bliss_fit)
 export(ccr2.plot_bliss_vs_FC)
 export(ccr2.plot_correction)
 export(ccr2.run)
