--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,4 +25,19 @@ export(ccr2.run_nontarget)
 export(ccr2.scale_pos_neg)
 export(ccr2.solveLinearSys)
 export(get_input_data)
+import(CRISPRcleanR)
+import(Matrix)
+import(RSpectra)
+import(dplyr)
 import(ggplot2)
+import(ggrepel)
+import(magrittr)
+import(readr)
+import(stringr)
+import(tibble)
+importFrom(GenomicRanges,findOverlaps)
+importFrom(GenomicRanges,makeGRangesFromDataFrame)
+importFrom(ggpubr,ggarrange)
+importFrom(igraph,clusters)
+importFrom(igraph,graph_from_edgelist)
+importFrom(readxl,read_xlsx)
