adapt to handle input as a unique file across batches. Add option to pass dual_count or dual_logFC to the final run function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(ccr2.run_nontarget)
 export(ccr2.scale_pos_neg)
 export(ccr2.solveLinearSys)
 export(get_input_data)
+export(get_input_data.v1)
 import(CRISPRcleanR)
 import(Matrix)
 import(RSpectra)
