approximate system with CVXR package (box constraints)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(ccr2.solveLinearSys)
 export(get_input_data)
 export(get_input_data.v1)
 import(CRISPRcleanR)
+import(CVXR)
 import(Matrix)
 import(RSpectra)
 import(dplyr)
