--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,13 +12,13 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Depends: R (>= 4.1.0),
-  Matrix,
+Depends: R (>= 4.1.0)
+Imports: Matrix,
   CRISPRcleanR, 
   ggplot2,
   ggrepel, 
-  stringr
-Imports: magrittr,
+  stringr,
+  magrittr,
   dplyr,
   readr,
   readxl,
