add ccr in imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: R (>= 4.1.0)
-Imports: Matrix,
+Imports: CRISPRcleanR,
+  Matrix,
   ggplot2,
   ggrepel, 
   stringr,
