--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ import(CRISPRcleanR)
 import(CVXR)
 import(Matrix)
 import(RSpectra)
+import(S4Vectors)
 import(dplyr)
 import(ggplot2)
 import(ggrepel)
