add roxygen annotation for all the functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(ccr2.scale_pos_neg)
 export(ccr2.solveLinearSys)
 export(get_input_data)
 export(get_input_data.v1)
+export(get_pairwise_correction)
 import(CRISPRcleanR)
 import(CVXR)
 import(Matrix)
